k8s/manifests/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd-client
  namespace: "default"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd-client
  template:
    metadata:
      labels:
        app: etcd-client
    spec:
      volumes:
      - name: report-path
        persistentVolumeClaim:
          claimName: report-path-claim
      - name: etcddata0
        persistentVolumeClaim:
          claimName: data-etcd-0
      - name: etcddata1
        persistentVolumeClaim:
          claimName: data-etcd-1
      - name: etcddata2
        persistentVolumeClaim:
          claimName: data-etcd-2
      containers:
      - name: etcd-client
        image: us-central1-docker.pkg.dev/molten-verve-216720/demo-repository/etcd-client:demo
        # image: localhost/etcd-client:latest
        imagePullPolicy: Never
        volumeMounts:
        - name: report-path
          mountPath: /var/report
        - name: etcddata0
          mountPath: /var/etcddata0
        - name: etcddata1
          mountPath: /var/etcddata1
        - name: etcddata2
          mountPath: /var/etcddata2
        command: ["sleep"]
        args: ["infinity"]
        readinessProbe:
          exec:
            command:
              - /bin/true # Verify shell can run commands
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
